--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
       <a 
-					class="more_inf" 
+					class="more-inf" 
 					href="https://goal-life.com/page/method/matrix-eisenhower"
 			>
 				Want more details?
 			</a>
     </div>	
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="centered-main__page-element">
+      <p id="top-section__for-adding__element-to__list">
 				<label for="new-task">Add Item</label>
-      	<div class="task-row-wrapper">
+      	<div class="task-row__wrapper">
 					<input 
 							id="new-task"
 							class="task" 
@@ -36,7 +36,7 @@
 				</div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="in-complet__tasks">
         <li>
 					<input type="checkbox">
 					<label class="task">Pay Bills</label>
@@ -46,7 +46,7 @@
 						<img src="./remove.svg">
 					</button>
 				</li>
-        <li class="editMode">
+        <li class="edit-mode">
 					<input type="checkbox">
 					<label class="task">Go Shopping</label>
 					<input type="text" value="Go Shopping" class="task">
