--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 		>
   </head>
   <body>
-    <div class="aaa">
+    <div class="info">
       <img src="./eisenhower-matrix.jpg">
       <a 
-					class="more-inf" 
+					class="more-info" 
 					href="https://goal-life.com/page/method/matrix-eisenhower"
 			>
 				Want more details?
 			</a>
     </div>	
-    <div class="centered-main__page-element">
-      <p id="top-section__for-adding__element-to__list">
+    <div class="centered-main__page-elm">
+      <p id="top-section__for-adding__elm-to__list">
 				<label for="new-task">Add Item</label>
       	<div class="task-row__wrapper">
 					<input 
@@ -36,22 +36,22 @@
 				</div>
       </p>
       <h3>Todo</h3>
-      <ul id="in-complet__tasks">
+      <ul id="in-complete__tasks">
         <li>
 					<input type="checkbox">
-					<label class="task">Pay Bills</label>
-					<input type="text" class="task">
-					<button class="edit">Edit</button>
-					<button class="delete">
+					<label class="task-txt">Pay Bills</label>
+					<input type="text" class="task-txt">
+					<button class="edit-btn">Edit</button>
+					<button class="delete-btn">
 						<img src="./remove.svg">
 					</button>
 				</li>
         <li class="edit-mode">
 					<input type="checkbox">
-					<label class="task">Go Shopping</label>
-					<input type="text" value="Go Shopping" class="task">
-					<button class="edit">Save</button>
-					<button class="delete">
+					<label class="task-txt">Go Shopping</label>
+					<input type="text" value="Go Shopping" class="task-txt">
+					<button class="edit-btn">Save</button>
+					<button class="delete-btn">
 						<img src="./remove.svg">
 					</button>
 				</li>
@@ -60,10 +60,10 @@
       <ul id="completed-tasks">
         <li>
 					<input type="checkbox" checked>
-					<label class="task">See the Doctor</label>
-					<input type="text" class="task">
-					<button class="edit">Edit</button>
-					<button class="delete">
+					<label class="task-txt">See the Doctor</label>
+					<input type="text" class="task-txt">
+					<button class="edit-btn">Edit</button>
+					<button class="delete-btn">
 						<img src="./remove.svg">
 					</button>
 				</li>
