--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="info">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt = "Eisenhower matrix">
       <a 
         class="more-info" 
         href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -43,7 +43,7 @@
         <input type="text" class="task-txt">
         <button class="edit-btn">Edit</button>
         <button class="delete-btn">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt = "remove button">
         </button>
       </li>
       <li class="edit-mode">
@@ -52,7 +52,7 @@
         <input type="text" value="Go Shopping" class="task-txt">
         <button class="edit-btn">Save</button>
         <button class="delete-btn">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt = "remove button">
         </button>
       </li>
     </ul>
@@ -64,7 +64,7 @@
         <input type="text" class="task-txt">
         <button class="edit-btn">Edit</button>
         <button class="delete-btn">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt = "remove button">
         </button>
       </li>
     </ul>
